fix on uneven lists

--- a/onestopshopper/css/stylesheet.css
+++ b/onestopshopper/css/stylesheet.css
@@ -833,7 +833,7 @@ input[type=submit] {
 	}
 
 	.list-item {
-		width: 99%;
+		width: 100%;
 	}
 
 	.list-item img{
